# cc-plugins

./: .gitignore  README.md  marketplace.json
.claude-plugin/: marketplace.json
agents/: business-screener.md  financial-analyzer.md  investment-manager.md  report-generator.md  risk-assessor.md  valuation-modeler.md
commands/: analyze.md  deep-dive.md  report.md  valuation.md
sdd/: README.md
sdd/agents/: developer.md  (+5 more)
value-investor/: .mcp.json  CLAUDE.md  README.md
value-investor/servers/: README.md  TESTING.md  compare_filings.py  download_test_data.py  financial_data_server.py  html_cleaner.py  inspect_filing.py  pyproject.toml  sec_edgar_fetcher.py  validate_test_data.py  yahoo_finance_fetcher.py  yahoo_finance_server.py
value-investor/servers/test_data/fixtures/: metadata.json
value-investor/servers/test_data/fixtures/AAPL/: 10-K_2025-10-31_cleaned.html  10-Q_2025-08-01_cleaned.html
value-investor/servers/test_data/fixtures/MSFT/: 10-K_2025-07-30_cleaned.html  10-Q_2025-10-29_cleaned.html
value-investor/servers/tests/: conftest.py
value-investor/servers/tests/agents/: test_business_screener.py
value-investor/servers/tests/deprecated/: test_html_cleaning.py  test_mcp.py  test_mcp_server.sh
value-investor/servers/tests/e2e/: __init__.py  test_yahoo_finance_mcp.py
value-investor/servers/tests/integration/: test_filing_processing.py  test_yahoo_statements.py
value-investor/servers/tests/unit/: test_html_cleaner.py  test_yahoo_finance_fetcher.py
value-investor/servers/value_investor_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+55 files in other folders)
