[project]
name = "value-investor-mcp-server"
version = "0.1.0"
description = "MCP server for SEC EDGAR filings and financial data"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "anthropic>=0.40.0",
]

[dependency-groups]
dev = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
markers = [
    "unit: fast unit tests with no I/O",
    "integration: integration tests with file I/O",
    "agent: tests requiring Claude API (slow, expensive)",
]
